Fixes for jwt
moved jwt encoder to controller concers, removed unncessesary to string in secret key
improved naming
