# swagger/v1/swagger.yaml
@@ -108,29 +108,20 @@ paths:
       responses:
         '200':
           description: successful
-  "/loans/users/{user_id}":
-    parameters:
-    - name: user_id
-      in: path
-      description: user_id
-      required: true
-      schema:
-        type: string
+  "/loans":
     get:
-      summary: index_by_user loan
+      summary: list loans
+      security:
+        - jwt: []
       tags:
       - Loan
       responses:
         '200':
           description: successful
-  "/loans":
-    get:
-      summary: list loans
-      responses:
-        '200':
-          description: successful
     post:
       summary: Create a new loan
+      security:
+       - jwt: []
       tags:
       - Loan
       parameters: []
@@ -152,31 +143,20 @@ paths:
               required:
               - name
               - model
-  "/loans/{id}":
+  "/loans/users/{user_id}":
     parameters:
-    - name: id
+    - name: user_id
       in: path
-      description: id
+      description: user_id
       required: true
       schema:
         type: string
     get:
-      summary: show loan
-      responses:
-        '200':
-          description: successful
-    patch:
-      summary: update loan
-      responses:
-        '200':
-          description: successful
-    put:
-      summary: update loan
-      responses:
-        '200':
-          description: successful
-    delete:
-      summary: delete loan
+      security:
+      - jwt: []
+      summary: index_by_user loan
+      tags:
+      - Loan
       responses:
         '200':
           description: successful
@@ -224,3 +204,10 @@ servers:
   variables:
     defaultHost:
       default: 127.0.0.1:3000/
+
+components:
+  securitySchemes:
+    jwt:
+      type: apiKey
+      in: header
+      name: Authorization
